--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
 button {
   border-radius: 8px;
