--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,6 +1,6 @@
 .link {
-  font-size: 20px;
-  color: black;
+  font-size: 16px;
+  color: rgb(3, 23, 74);
 }
 
 .container {
@@ -15,6 +15,14 @@
 .img {
   margin-right: 50px;
 }
+.btn {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  border-radius: 4px;
+  border: solid 2px rgb(81, 88, 212);
+}
+
 .genres {
   display: flex;
 }
